objects/Contact_Update__c.object
<CustomObject>
    <fields>
        <fullName>Audience__c</fullName>
        <label>Audience</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Public</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Updates</relationshipLabel>
        <relationshipName>Contact_Updates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Make_Public__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Make Public</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Siebel_ID__c</fullName>
        <externalId>true</externalId>
        <label>Siebel ID</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Auto-Followup</fullName>
                </value>
                <value>
                    <fullName>Done</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Unassigned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>Action Plan</fullName>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Info Required from Customer</fullName>
                </value>
                <value>
                    <fullName>Proposed Solution</fullName>
                </value>
                <value>
                    <fullName>Assessment, Assign to Tier 3</fullName>
                </value>
                <value>
                    <fullName>Assign SR to Tier3-TS use only</fullName>
                </value>
                <value>
                    <fullName>Call - Inbound, Call - Outbound</fullName>
                </value>
                <value>
                    <fullName>Internal Communication</fullName>
                </value>
                <value>
                    <fullName>Investigate Maintenance</fullName>
                </value>
                <value>
                    <fullName>License Inquiry</fullName>
                </value>
                <value>
                    <fullName>Manager Attention</fullName>
                </value>
                <value>
                    <fullName>Next Action</fullName>
                </value>
                <value>
                    <fullName>Onsite Support</fullName>
                </value>
                <value>
                    <fullName>Order Update</fullName>
                </value>
                <value>
                    <fullName>Outage</fullName>
                </value>
                <value>
                    <fullName>PgM Status Update</fullName>
                </value>
                <value>
                    <fullName>Remote Support</fullName>
                </value>
                <value>
                    <fullName>Transition</fullName>
                </value>
                <value>
                    <fullName>Web Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Contact Update</label>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>Acitivity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Updates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>